fix(manager): wire KsuSetup into BootCompletedReceiver; load LKM directly via exploit+ksud (kill-zygote reboots this ROM); update exploit binary